[build-system]
requires = [
    "setuptools",
    "wheel",
    "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxforhealth-core-connect"
version = "0.1.0-dev"
description = "LinuxForHealth Core Connect provides the data acquisition service for the LinuxForHealth Health OS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache 2.0 License" }
keywords = ["linuxforhealth", "healthos"]
authors = [
    { name = "Carole Corley" },
    { name = "Ted Tanner" },
    { name = "Dixon Whitmire" }
]
maintainers = [
    { name = "Carole Corley" },
    { name = "Dixon Whitmire" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators"
]
dependencies = [
    "pydantic >= 1.9"
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.0",
    "linuxforhealth-core-connect[api]",
    "linuxforhealth-core-connect[messaging]",
]

api = [
    "fastapi>=0.78.0",
    "uvicorn[standard]>=0.17.0",
    "requests>=2.27.0"
]

messaging = [
    "faust-streaming>=0.8.5",
    "nats-py>=2.1.3"
]

all = [
    "linuxforhealth-core-connect[api]",
    "linuxforhealth-core-connect[messaging]"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
  )/
)
'''