[metadata]
name = linuxforhealth-core-connect
version = attr: linuxforhealth.core.connect.__version__
description = LinuxForHealth Core Connect provides the data acquisition service for the LinuxForHealth Health OS.
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

[options]
install_requires =
    pydantic >= 1.9
    python-dotenv >=  0.20.0
package_dir=
    =src
packages=find_namespace:
python_requires = >= 3.10
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    black = black:patched_main


[options.extras_require]
api =
    fastapi>=0.78.0
    uvicorn[standard]>=0.17.0
    requests>=2.27.0

filesystem =
	watchdog>=2.1.9

messaging =
	faust>=1.10.4
	nats-py>=2.1.3

dev =
    black>=22.3.0
    pytest>=7.1.0
    # workaround for https://github.com/pypa/setuptools/issues/3139
    %(api)s

all =
	%(api)s
	%(filesystem)s
	%(messaging)s