[tool.poetry]
name = "linuxforhealth-healthos-core"
version = "0.1.0a1"
description = "LinuxForHealth HealthOS Core Module"
license = "Apache-2.0"
authors = [
    "Carole Corley <ccorley@merative.com>",
    "Theodore Tanner <theodore.tanner@merative.com>",
    "Dixon Whitmire <dwhitmire@merative.com>",
]
maintainers = [
    "Carole Corley <ccorley@merative.com>",
    "Dixon Whitmire <dwhitmire@merative.com>",
]
readme = "README.md"
repository = "https://github.com/LinuxForHealth/HealthOS"
documentation = "https://github.com/LinuxForHealth/HealthOS/blob/main/core/README.md"
keywords = ["HealthOS", "healthit", "ubuntu", "LinuxForHealth", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators"
]

packages = [
    {include = "linuxforhealth", from="src/"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = "^1.9.1"
aiokafka = "^0.7.2"
nats-py = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
