[tool.poetry]
name = "linuxforhealth-healthos-support"
version = "0.1.1-alpha"
description = "LinuxForHealth HealthOS Support Module"
authors = [
    "Carole Corley <ccorley@merative.com>",
    "Theodore Tanner <theodore.tanner@merative.com>",
    "Dixon Whitmire <dwhitmire@merative.com>",
]
maintainers = [
    "Carole Corley <ccorley@merative.com>",
    "Dixon Whitmire <dwhitmire@merative.com>",
]
readme = "README.md"
repository = "https://github.com/LinuxForHealth/HealthOS"
documentation = "https://github.com/LinuxForHealth/HealthOS/blob/main/support/README.md"
keywords = ["HealthOS", "healthit", "ubuntu", "LinuxForHealth", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators"
]

packages = [
    {include = "linuxforhealth", from="src/"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
